// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-center"
  style={
    Object {
      "height": "495px",
    }
  }
>
  <AdminNavItem
    iconClass="fa-tachometer"
    key="RANDOM_KEY_0"
    navFn={[Function]}
    target="dashboard"
    text="Dashboard"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip=""
    url="/admin/dashboard"
  />
  <AdminNavItem
    iconClass="fa-ship"
    key="RANDOM_KEY_1"
    navFn={[Function]}
    target="shipments"
    text="Shipments"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="Effectively manage your shipments. Get an overview of requested, open & finished shipments. In addition, it is possible to accept, edit & decline shipments"
    url="/admin/shipments"
  />
  <AdminNavItem
    iconClass="fa-building-o"
    key="RANDOM_KEY_2"
    navFn={[Function]}
    target="hubs"
    text="Hubs"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="Manage your hubs as well as activating/deactivating them. Effectively, it decides whether or not cargo is accepted in these locations"
    url="/admin/hubs"
  />
  <AdminNavItem
    iconClass="fa-area-chart"
    key="RANDOM_KEY_3"
    navFn={[Function]}
    target="pricing"
    text="Pricing"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="Manage everything that has to with prices, service charges, fees etc. Open prices & dedicated prices can be changed and reflected in the shop immediately"
    url="/admin/pricing"
  />
  <AdminNavItem
    iconClass="fa-list"
    key="RANDOM_KEY_4"
    navFn={[Function]}
    target="schedules"
    text="Schedules"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="Administrate sailing schedules by a simple upload"
    url="/admin/schedules"
  />
  <AdminNavItem
    iconClass="fa-truck"
    key="RANDOM_KEY_5"
    navFn={[Function]}
    target="trucking"
    text="Trucking"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="Update prices, fees, charges for trucking. Here zip code & city sheets can be uploaded"
    url="/admin/trucking"
  />
  <AdminNavItem
    iconClass="fa-users"
    key="RANDOM_KEY_6"
    navFn={[Function]}
    target="clients"
    text="Client"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip=""
    url="/admin/clients"
  />
  <AdminNavItem
    iconClass="fa-map-signs"
    key="RANDOM_KEY_7"
    navFn={[Function]}
    target="routes"
    text="Routes"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="Configure all the routes displayed in the shop"
    url="/admin/routes"
  />
  <AdminNavItem
    iconClass="fa-magic"
    key="RANDOM_KEY_8"
    navFn={[Function]}
    target="wizard"
    text="Set Up"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="This option is only for the very first configuration of the shop or if you want to reset the shop system with new data. IMPORTANT: this will overwrite all existing data"
    url="/admin/wizard"
  />
</div>
`;

exports[`user.role && user.role.name === super_admin 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-center"
  style={
    Object {
      "height": "550px",
    }
  }
>
  <AdminNavItem
    iconClass="fa-tachometer"
    key="RANDOM_KEY_9"
    navFn={[Function]}
    target="dashboard"
    text="Dashboard"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip=""
    url="/admin/dashboard"
  />
  <AdminNavItem
    iconClass="fa-ship"
    key="RANDOM_KEY_10"
    navFn={[Function]}
    target="shipments"
    text="Shipments"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="Effectively manage your shipments. Get an overview of requested, open & finished shipments. In addition, it is possible to accept, edit & decline shipments"
    url="/admin/shipments"
  />
  <AdminNavItem
    iconClass="fa-building-o"
    key="RANDOM_KEY_11"
    navFn={[Function]}
    target="hubs"
    text="Hubs"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="Manage your hubs as well as activating/deactivating them. Effectively, it decides whether or not cargo is accepted in these locations"
    url="/admin/hubs"
  />
  <AdminNavItem
    iconClass="fa-area-chart"
    key="RANDOM_KEY_12"
    navFn={[Function]}
    target="pricing"
    text="Pricing"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="Manage everything that has to with prices, service charges, fees etc. Open prices & dedicated prices can be changed and reflected in the shop immediately"
    url="/admin/pricing"
  />
  <AdminNavItem
    iconClass="fa-list"
    key="RANDOM_KEY_13"
    navFn={[Function]}
    target="schedules"
    text="Schedules"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="Administrate sailing schedules by a simple upload"
    url="/admin/schedules"
  />
  <AdminNavItem
    iconClass="fa-truck"
    key="RANDOM_KEY_14"
    navFn={[Function]}
    target="trucking"
    text="Trucking"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="Update prices, fees, charges for trucking. Here zip code & city sheets can be uploaded"
    url="/admin/trucking"
  />
  <AdminNavItem
    iconClass="fa-users"
    key="RANDOM_KEY_15"
    navFn={[Function]}
    target="clients"
    text="Client"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip=""
    url="/admin/clients"
  />
  <AdminNavItem
    iconClass="fa-map-signs"
    key="RANDOM_KEY_16"
    navFn={[Function]}
    target="routes"
    text="Routes"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="Configure all the routes displayed in the shop"
    url="/admin/routes"
  />
  <AdminNavItem
    iconClass="fa-magic"
    key="RANDOM_KEY_17"
    navFn={[Function]}
    target="wizard"
    text="Set Up"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip="This option is only for the very first configuration of the shop or if you want to reset the shop system with new data. IMPORTANT: this will overwrite all existing data"
    url="/admin/wizard"
  />
  <AdminNavItem
    iconClass="fa-star"
    key="RANDOM_KEY_18"
    navFn={[Function]}
    target="super_admin"
    text="Super Admin"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    tooltip=""
    url="/super_admin/upload"
  />
</div>
`;
